Added a function to randomize the topics listed

--- a/index.html
+++ b/index.html
@@ -51,7 +51,11 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your JavaScript notes here</li>
+          <li>A variable is a named container that allows us to store data in our code</li>
+          <li>Contorl flow is the order in which a computer executes code in a script</li>
+          <li>A for loop will help us execute the same task over and over again</li>
+          <li>The math random function will make the application choose a random value from the array of contents</li>
+          <li>the console.log command will display on the page the string or value listed inside the parenthesis</li>
         </ul>
    
       </section>
